--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@prisma/client": "^6.8.2",
     "geist": "^1.4.2",
     "next": "^15.3.2",
+    "postmark": "^4.0.5",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
